# predict-eth

./: .gitignore  LICENSE  README.md  data-sources.md  developers.md  modeling.md  predict-eth-h1.md  predict-eth1.md  predict-eth2.md  pyproject.toml  release-process.md  requirements.txt
challenges/: DataBuilders Hackathon  challenge-df.md  df-challenge.md  hack1.md  main1.md  main2.md  main3.md  main4.md  main5.md  main6.md  main7.md
examples/: end-to-end-gentle.md  end-to-end-via-mas-and-emas.md  end-to-end-via-raw-ccxt-data-and-linear-models.md  end-to-end-via-raw-ocean-data-and-linear-models.md  end-to-end_compare-models.md  end-to-end_optimized.md  end-to-end_simple.md  get-btcdata-ocean-binance.md  get-data-binance-direct.md  get-data-ccxt-binance.md  get-data-ocean-binance.md  get-data-ocean-the-graph.md  get-ethdata-binance-direct.md  get-ethdata-ccxt-binance.md  get-ethdata-ocean-binance.md  get-ethdata-ocean-thegraph.md  helpers.md  model_example_direct_prediction.md  predict-eth-graphQL-data-linear-models.md  predict-eth-ocean-data-linear-models.md  ready-submit-eth-ocean-data-linear-model.md  real-time-raw-mas-emas.md
ideas/: algorithmic-trading-flow.md  articles.md  data-sources.md  modeling.md
predict_eth/: helpers.py
predict_eth/test/: test_helpers.py
support/: helpers.md  helpers2.md
